--- a/src/application/styles/reset.css
+++ b/src/application/styles/reset.css
@@ -78,7 +78,8 @@ summary,
 time,
 mark,
 audio,
-video {
+video,
+button {
   padding: 0;
   border: 0;
   margin: 0;
@@ -115,7 +116,7 @@ blockquote::before,
 blockquote::after,
 q::before,
 q::after {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -149,20 +150,22 @@ textarea {
   line-height: inherit;
 }
 
-input[type='number'] {
+input[type="number"] {
+  /* stylelint-disable-next-line plugin/no-unsupported-browser-features */
   appearance: textfield;
 }
 
-input[type='number']::-webkit-outer-spin-button,
-input[type='number']::-webkit-inner-spin-button {
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
+  /* stylelint-disable-next-line plugin/no-unsupported-browser-features */
   appearance: none;
 }
 
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
 
