Improve inputs and transaction dialog

--- a/src/Page/TransactionDialog.css
+++ b/src/Page/TransactionDialog.css
@@ -53,6 +53,12 @@
 
   &_fullPrice {
     height: 20px;
+    margin-top: 10px;
+  }
+
+  &_buttons {
+    display: flex;
+    gap: 10px;
   }
 
   &_button {
