--- a/src/Page/TransactionDialog.css
+++ b/src/Page/TransactionDialog.css
@@ -1,9 +1,15 @@
 .Transaction {
   position: absolute;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--c-gray-1-7);
+  background-color: var(--c-gray-1-8);
+
+  &_message {
+    padding: 20px;
+    text-align: center;
+  }
 
   &_container {
     overflow: auto;
