--- a/src/Page/TransactionList.css
+++ b/src/Page/TransactionList.css
@@ -26,9 +26,9 @@
   }
 
   &_infList {
-    overflow: auto;
     width: 100%;
     height: 100vh;
+    overflow-y: scroll;
   }
 
   &_statusMessage {
