--- a/src/application/styles/media.css
+++ b/src/application/styles/media.css
@@ -1,3 +1,5 @@
-@custom-media --t (width >= 768px);
+@custom-media --m (width >= 768px);
+
 @custom-media --l (width >= 992px);
+
 @custom-media --xl (width >= 1200px);
