--- a/src/application/styles/common.css
+++ b/src/application/styles/common.css
@@ -1,19 +1,33 @@
 @import './reset.css';
+
 @import './media.css';
+
 @import './variables.css';
+
 @import './global.css';
 
 /* css components */
+
 @import './button.css';
 
 /* views */
+
 @import '../../View/Input.css';
+
 @import '../../View/Checkbox.css';
+
 @import '../../View/Header.css';
 
+@import '../../View/Loader.css';
+
 /* pages */
+
 @import '../../Page/NotFound.css';
+
 @import '../../Page/SignIn.css';
+
 @import '../../Page/TransactionList.css';
+
 @import '../../Page/CSV.css';
+
 @import '../../Dialog/TransactionDialog.css';
