--- a/src/Page/TransactionList.css
+++ b/src/Page/TransactionList.css
@@ -1,24 +1,28 @@
 .TransactionsList {
   display: flex;
   align-items: center;
+  overflow-y: scroll;
 
   &_header {
-    position: sticky;
     z-index: 1;
-    top: 0;
     display: flex;
     width: 100%;
     min-width: var(--min-page-width);
     max-width: var(--max-page-width);
     flex-direction: column;
-    margin: 0 auto;
     background-color: var(--c-gray-1);
+
+    &__placeholder {
+      position: static;
+      visibility: hidden;
+    }
   }
 
   &_searchContainer {
     width: 100%;
     padding: var(--space-md);
     border-bottom: 1px solid var(--c-gray-4);
+    background-color: var(--c-gray-1);
   }
 
   &_search {
@@ -26,6 +30,11 @@
   }
 
   &_infList {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
     overflow-y: scroll;
