--- a/src/View/Checkbox.css
+++ b/src/View/Checkbox.css
@@ -69,9 +69,9 @@
   &_required {
     display: none;
 
-    :required + label > & {
+    &__visible {
       display: block;
-      margin-left: 5px;
+      margin-right: 5px;
     }
   }
 }
