--- a/src/View/Input.css
+++ b/src/View/Input.css
@@ -4,9 +4,10 @@
   flex-direction: column;
 
   &_input {
+    width: 100%;
     height: 30px;
     padding-left: 7px;
-    border: 1px solid var(--c-gray-6);
+    border: 2px solid var(--c-gray-4);
     background-color: var(--c-gray-2);
     border-radius: var(--bdrs-md);
     color: var(--c-gray-9);
