--- a/src/Dialog/TransactionDialog.css
+++ b/src/Dialog/TransactionDialog.css
@@ -19,10 +19,12 @@
   }
 
   &_container {
+    display: flex;
     overflow: auto;
     width: 100%;
     max-width: var(--max-page-width);
     max-height: 100%;
+    flex-direction: column;
     padding: var(--space-lg);
     border: 1px solid var(--c-gray-5);
     background-color: var(--c-gray-1);
@@ -58,6 +60,7 @@
   }
 
   &_checkBoxWrapper {
+    align-self: flex-start;
     margin-bottom: 10px;
   }
 
