--- a/src/View/Input.css
+++ b/src/View/Input.css
@@ -32,6 +32,11 @@
     &::placeholder {
       color: var(--c-gray-5);
     }
+
+    &:disabled {
+      cursor: not-allowed;
+      opacity: 0.5;
+    }
   }
 
   &_label {
