Add window width

--- a/src/application/styles/media.css
+++ b/src/application/styles/media.css
@@ -1,5 +1,7 @@
-@custom-media --m (width >= 768px);
+/* Don't forget to update Store.elm as well */
 
-@custom-media --l (width >= 992px);
+@custom-media --medium (width >= 768px);
 
-@custom-media --xl (width >= 1200px);
+@custom-media --large (width >= 992px);
+
+@custom-media --extraLarge (width >= 1200px);
