--- a/src/application/styles/button.css
+++ b/src/application/styles/button.css
@@ -29,7 +29,7 @@
     0 1px 5px 0 rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: box-shadow var(--t);
-  @media (--m) {
+  @media (--medium) {
     right: 70px;
     bottom: 70px;
   }
