--- a/src/Dialog/TransactionDialog.css
+++ b/src/Dialog/TransactionDialog.css
@@ -31,6 +31,21 @@
     border-radius: var(--bdrs-md);
   }
 
+  &_inputWrapper {
+    display: flex;
+    width: 100%;
+    align-items: center;
+
+    & .Input {
+      width: calc(100% - 120px);
+    }
+  }
+
+  &_inputButton {
+    padding: 6px 25px;
+    margin-left: 3px;
+  }
+
   &_input {
     width: 100%;
   }
