--- a/src/Dialog/TransactionDialog.css
+++ b/src/Dialog/TransactionDialog.css
@@ -69,7 +69,7 @@
       width: 60%;
       height: 3px;
       background-color: var(--c-gray-7);
-      content: '';
+      content: "";
       transform: rotate(45deg);
     }
 
