--- a/src/application/styles/button.css
+++ b/src/application/styles/button.css
@@ -24,9 +24,9 @@
   background-color: var(--c-gray-2);
   border-radius: 50%;
   box-shadow:
-    0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 3px 1px -2px rgba(0, 0, 0, 0.12),
-    0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    0 2px 2px 0 rgb(0 0 0 / 14%),
+    0 3px 1px -2px rgb(0 0 0 / 12%),
+    0 1px 5px 0 rgb(0 0 0 / 20%);
   cursor: pointer;
   transition: box-shadow var(--t);
   @media (--medium) {
@@ -36,8 +36,8 @@
 
   &:hover {
     box-shadow:
-      0 3px 3px 0 rgba(0, 0, 0, 0.14),
-      0 1px 7px 0 rgba(0, 0, 0, 0.12),
-      0 3px 1px -1px rgba(0, 0, 0, 0.2);
+      0 3px 3px 0 rgb(0 0 0 / 14%),
+      0 1px 7px 0 rgb(0 0 0 / 12%),
+      0 3px 1px -1px rgb(0 0 0 / 20%);
   }
 }
