--- a/src/Page/SignIn.css
+++ b/src/Page/SignIn.css
@@ -24,16 +24,17 @@
 
   &_usernameContainer {
     display: flex;
+    width: 100%;
     align-items: center;
+  }
+
+  &_usernameContainer > *:first-child {
+    flex-grow: 1;
   }
 
   &_newButton {
     padding: 7px;
-    margin-left: auto;
-
-    & + * {
-      flex-grow: 1;
-    }
+    margin-left: var(--space-sm);
   }
 
   &_state {
@@ -42,5 +43,10 @@
     &__wrongPassword {
       color: var(--c-danger);
     }
+  }
+
+  &_version {
+    margin-top: var(--space-lg);
+    color: var(--c-gray-4);
   }
 }
